--- a/Views/SettingsView.xaml
+++ b/Views/SettingsView.xaml
@@ -157,6 +157,8 @@
                                         Width="60" 
                                         Height="30"/>
                             </Grid>
+                            <TextBlock Text="DSLRBooth API Password" FontSize="14" Margin="0,10,0,5" Foreground="White"/>
+                            <TextBox Text="{Binding DSLRBoothPassword}" FontSize="12" Padding="5"/>
                         </StackPanel>
                     </GroupBox>
 
