--- a/Views/VoucherPaymentPage.xaml
+++ b/Views/VoucherPaymentPage.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:local="clr-namespace:MiddleBooth.Views">
+             xmlns:local="clr-namespace:MiddleBooth.Views"
+             Unloaded="UserControl_Unloaded">
 
     <UserControl.Resources>
         <Style x:Key="CircularButtonStyle" TargetType="Button">
